Changed about section

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
       <div class="w-row">
         <div class="w-col w-col-8">
           <p data-ix="scroll" class="p-intro">Hello!
-            <br>I&nbsp;am the Senior Creative at Axial, a interactive design agency in Boulder, CO.</p>
+            <br>I am the Design Director and UI/UX Practice lead at Gorilla Logic, a software consulting company in Boulder, CO.</p>
           <p data-ix="scroll">Perviously, I worked at at Threespot, an NGO focused digital agency in Washington, DC. I primarily contributed to Peace Corps, Planned Parenthood, and the National Park Service team.</p>
           <p data-ix="scroll">I joined Threespot in September 2011 from U.S. News &amp; World Report. While at U.S. News, I was a key player in the redesign of usnews.com and an integral part of the launch of several high-profile products. Earlier in my career, I worked as a designer for National Geographic International Publishing Group and as a Math/Science Education Volunteer for the Peace Corps in rural Kenya.</p>
           <p data-ix="scroll" class="p-last">As a BFA graduate of Middlebury College and Boston University Center for Digital Imaging Arts, I am grateful that my passions have taken me around the world.&nbsp;When not in the studio, I can be found down at the sand volleyball courts, exploring the outdoors or day dreaming of upgrading my household appliances.&nbsp;</p>
